add qualified configuration values search methods in ConfigurationTree, DropwizardAwareModule and GuiceyEnvironments
(cherry picked from commit 11a4d3f7eaca9ed5cb2a8922ae35d086e77027ed)